--- a/zani-browser/dev/mac/install
+++ b/zani-browser/dev/mac/install
@@ -7,5 +7,6 @@ git clone https://github.com/Zxnii/zani-browser.git
 cd zani-browser
 npm install
 npm run build
-mv ./* ~/atpm/zani-browser
+mkdir ~/aptm/zani-browser
+mv ./* ~/atpm/zani-browser/
 echo "npm run start" > ~/atpm/zani-browser/atpm_run_commands.txt
